rem fix in text

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ form input
     border: none;
     background: white;
     border-radius: 2rem;
-    width: 400px;
+    width: 19rem;
 }
  
 form button {
